<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="doc">Пользовательское соглашение</string>
    <string name="Searching">Поиск</string>
    <string name="Media_library">Медиатека</string>
    <string name="ButtonShare">Выберите приложение для отправки</string>
    <string name="buttonSupport">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_body_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="linkLicense">https://yandex.ru/legal/practicum_offer/</string>
    <string name="linkShare">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="forMails">mailto:</string>
    <string name="nirvana_song">Smells Like Teen Spirit</string>
    <string name="nirvana">Nirvana</string>
    <string name="nirvana_num">5:01</string>
    <string name="nirvana_url">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="jackson_song">Billie Jean</string>
    <string name="jackson">Michael Jackson</string>
    <string name="jackson_num">4:35</string>
    <string name="jackson_url">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="beegees_song">Stayin\' Alive</string>
    <string name="beegees">Bee Gees</string>
    <string name="beegees_num">4:10</string>
    <string name="beegees_url">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="zeppelin_song">Whole Lotta Love</string>
    <string name="zeppelin">Led Zeppelin</string>
    <string name="zeppelin_num">5:33</string>
    <string name="zeppelin_url">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="guns_and_roses_song">Sweet Child O\'Mine</string>
    <string name="guns_and_roses">Guns N\' Roses</string>
    <string name="guns_and_roses_num">5:03</string>
    <string name="guns_and_roses_url">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
</resources>