<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/screen_padding"
        android:layout_marginStart="@dimen/icon_padding">

        <ImageButton
            android:id="@+id/buttonBackToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            android:src="@drawable/arrowback"
            app:tint="?attr/colorOnSecondary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_gravity="center"
            style="@style/MessageTextStyle"
            android:text="@string/settings"
            android:textSize="@dimen/primary_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="@dimen/screen_padding"
        android:layout_marginStart="@dimen/screen_padding">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:text="@string/night_theme"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/secondary_text_size"
            android:textFontWeight="500"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorSecondary"
            android:textAllCaps="false"
            app:trackTint="?attr/android:trackTint"
            app:thumbTint="?attr/android:thumbTint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/row_padding"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginEnd="@dimen/screen_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            style="@style/MessageTextStyle"
            android:layout_weight="13"
            android:fontFamily="@font/ys_display_regular"/>

        <ImageButton
            style="@style/ButtonSettingStyle"
            android:id="@+id/buttonShare"
            android:src="@drawable/share"
            android:layout_gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/row_padding"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginEnd="@dimen/screen_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:text="@string/support"
            style="@style/MessageTextStyle"
            android:fontFamily="@font/ys_display_regular"/>

        <ImageButton
            style="@style/ButtonSettingStyle"
            android:id="@+id/buttonSupport"
            android:src="@drawable/group" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/row_padding"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginEnd="@dimen/screen_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:text="@string/doc"
            style="@style/MessageTextStyle"
            android:fontFamily="@font/ys_display_regular"/>

        <ImageButton
            style="@style/ButtonSettingStyle"
            android:id="@+id/userDoc"
            android:src="@drawable/arrowforward"/>

    </LinearLayout>


</LinearLayout>